dev/myfirstwebapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfirstwebapp
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web        
    spec:
      containers:
        - name: myfirstwebapp
          image: asia-south2-docker.pkg.dev/test-project-bodhi/mfwa/myfirstwebapp:v1
          ports:
            - name: port-80
              containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - web
                topologyKey: kubernetes.io/hostname
