dev/nodeport.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#nodeport
apiVersion: v1
kind: Service
metadata:
  name: myfirstwebapp-nodeport-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80         # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
      targetPort: 80   # Optional field.
